trunk/Archive2/49/955e49fccea46d/output
main.cpp:4:69: error: template argument 2 is invalid
 auto dependent_return_type(std::size_t size) -> std::array<int, size> {
                                                                     ^
main.cpp:4:69: error: template argument 2 is invalid
main.cpp:4:69: error: template argument 2 is invalid
main.cpp:4:69: error: template argument 2 is invalid
main.cpp:4:69: error: template argument 2 is invalid
main.cpp:4:69: error: template argument 2 is invalid
main.cpp:4:69: error: template argument 2 is invalid
main.cpp:4:69: error: template argument 2 is invalid
main.cpp:4:69: error: template argument 2 is invalid
main.cpp:4:49: error: invalid use of template-name ‘std::array’ without an argument list
 auto dependent_return_type(std::size_t size) -> std::array<int, size> {
                                                 ^
main.cpp:4:59: error: expected initializer before ‘<’ token
 auto dependent_return_type(std::size_t size) -> std::array<int, size> {
                                                           ^
